# HA-aux

./: .gitignore  CHANGELOG.md  README.md  hacs.json  pyproject.toml  repository.yaml
addons/ha-aux/: Dockerfile  config.yaml  pyproject.toml
addons/ha-aux/rootfs/etc/cont-init.d/: 00-audio-permissions.sh
addons/ha-aux/rootfs/etc/services.d/ha-aux/: run
addons/ha-aux/src/ha_aux_addon/: __init__.py  __main__.py  audio_detector.py  keep_alive.py  mpv_controller.py  server.py
addons/ha-aux/translations/: en.yaml
custom_components/ha_aux/: __init__.py  config_flow.py  const.py  manifest.json  media_player.py  services.yaml  strings.json
