[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ha-aux"
version = "1.0.0"
description = "Local Audio Renderer for Home Assistant"
license = {text = "Unlicense"}

[tool.setuptools.packages.find]
include = ["ha_aux_addon*"]
where = ["addons/ha-aux/src"]

[tool.setuptools.package-data]
ha_aux_addon = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "ARG", "C4", "T10"]
ignore = [
    "E501",  # Line length handled by Black
    "E402",  # Module level imports not at top (needed for sys.path)
]

[tool.ruff.format]
quote-style = "double"
