[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ha-aux-addon"
version = "1.0.0"
description = "HA aux add-on server - Local Audio Renderer for Home Assistant"

[tool.setuptools.packages.find]
include = ["ha_aux_addon*"]
where = ["src"]
